--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
@@ -19,10 +24,12 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.11.0",
+    "isomorphic-ws": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.5.0",
+    "mongodb": "^6.7.0",
     "next": "14.2.3",
     "next-connect": "^1.0.0",
+    "node": "^20.15.0",
     "node-fetch": "^3.3.2",
     "os": "^0.1.1",
     "path": "^0.12.7",
@@ -30,13 +37,16 @@
     "react": "^18",
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3"
+    "react-hook-form": "^7.51.3",
+    "react-modal": "^3.16.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "string-replace-loader": "^3.1.0",
     "tailwindcss": "^3.4.3"
   }
 }
