--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
@@ -26,7 +27,7 @@
     "google-auth-library": "^9.11.0",
     "isomorphic-ws": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.7.0",
+    "mongodb": "^6.8.0",
     "multiparty": "^4.2.3",
     "next": "14.2.3",
     "next-connect": "^1.0.0",
