--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-modal": "^3.16.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
